refactor: change route methods
