# src/modules/accounting/accounts/accounts.secure.router.js
@@ -1,7 +1,7 @@
 const { Router } = require('express');
 const { StatusCodes } = require('http-status-codes');
 
-const { OK, NO_CONTENT } = StatusCodes;
+const { OK, NO_CONTENT, CREATED } = StatusCodes;
 const AccountService = require('./index');
 const {
   checkToken, decodeToken, validateToken, userIdValidator,
@@ -20,14 +20,14 @@ AcccountsSecureRouter.get('/', async (req, res) => {
   return res.status(OK).json(userAccounts);
 });
 
-AcccountsSecureRouter.post('/create',
+AcccountsSecureRouter.post('/',
   validator(accountCreate, 'body'),
   async (req, res) => {
     const { userId } = req.params;
 
     const account = await AccountService.create(req.body, userId);
 
-    res.status(OK).json(account);
+    res.status(CREATED).json(account);
   });
 
 AcccountsSecureRouter.get('/:accountId/', async (req, res) => {
@@ -36,7 +36,12 @@ AcccountsSecureRouter.get('/:accountId/', async (req, res) => {
   res.status(OK).json(account);
 });
 
-AcccountsSecureRouter.get('/:accountId/delete', async (req, res) => {
+AcccountsSecureRouter.put('/:accountId', async (req, res) => {
+  const account = await AccountService.update(req.params.accountId, req.body.name);
+  res.status(OK).json(account);
+});
+
+AcccountsSecureRouter.delete('/:accountId/', async (req, res) => {
   await AccountService.remove(req.params.accountId);
 
   return res.sendStatus(NO_CONTENT);
